--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,36 +4,14 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center;
-	height: 100vh;
 }
 
 .main {
-	padding: 5rem 0;
 	flex: 1;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	margin: 10px auto;
 	max-width: 90%;
 	width: 1000px;
-	background-color: red;
-}
-
-.footer {
-	width: 100%;
-	height: 100px;
-	border-top: 1px solid #eaeaea;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.footer a {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-grow: 1;
+	background-color: #f6f6ef;
 }
 
 .title a {
