--- a/components/NewsItem/NewsItem.module.css
+++ b/components/NewsItem/NewsItem.module.css
@@ -2,6 +2,7 @@
 	display: flex;
 	align-items: flex-start;
 	gap: 0.2em;
+	position: relative;
 }
 
 .newsTitle {
@@ -24,4 +25,12 @@
 .id {
 	color: gray;
 	font-size: small;
+}
+
+.previewCard {
+	position: absolute;
+	min-height: 200px;
+	display: flex;
+	z-index: 99;
+	max-width: 350px;
 }
