--- a/components/NewsItemList/NewsItemList.module.css
+++ b/components/NewsItemList/NewsItemList.module.css
@@ -8,4 +8,21 @@
 .more {
 	padding: 0.5rem 1.5rem;
 	color: gray;
+	font-size: small;
+}
+
+.strip {
+	height: 2px;
+	background-color: #ff6600;
+}
+
+.menu {
+	font-size: x-small;
+}
+
+.menuList {
+	display: flex;
+	gap: 0.2em;
+	justify-content: center;
+	padding: 1em;
 }
