--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -14,6 +14,14 @@
 	background-color: #f6f6ef;
 }
 
+@media (max-width: 480px) {
+	.main {
+		width: 100%;
+		min-width: 100%;
+		margin: 0;
+	}
+}
+
 .title a {
 	color: #0070f3;
 	text-decoration: none;
